--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: java
+
+addons:
+  sonarcloud:
+    organization: "mathms01"
+    token:
+      secure: "ec465ec67b4613c644c90208907142c815f20443" # encrypted value of your token
+
+script:
+  # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=sonarcloudprojectkeymms01
